Primera Actualización. No se cuenta con la imagen de la persona aún y hace falta las expresiones regulares.

--- a/Vistas/SelectPersonas.xaml
+++ b/Vistas/SelectPersonas.xaml
@@ -9,6 +9,7 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
 
+        <!-----Esta es una prueba-->
         <CollectionView ItemsSource="{Binding Items}"
                 SelectionMode="Single">
             <CollectionView.ItemTemplate> <!---¿Que hace esto?-->
